# planner-agent-workshop

./: .env.example  .gitignore  CHANGES_SUMMARY.md  README.md  agent_comparison_notebook.ipynb  deepagent_notebook.ipynb  langgraph.json  pyproject.toml  test_agent_06.sh  test_agent_07.sh  test_agent_08.sh  workshop_notebook.ipynb
.deepagents/skills/company-intelligence/: SKILL.md
agents/: agent_01_basic.py  agent_02_memory.py  agent_03_human_in_loop_interrupt.py  agent_04_middleware_tool_confirmation.py  agent_05_structured_output_mcp.py  agent_06_supervisor_multi_agent.py  agent_07_guardrail_middleware.py  agent_08_image_handling.py  agent_09_long_term_memory.py  agent_10_intro_deep_agents.py  agent_11_deep_agents_subagents.py  agent_12_deep_agents_middleware.py  models.py
docs/: CREATE_AGENT.md  DEEP_AGENTS.md  FIXES_AGENTS_07_08.md  FIXES_AGENT_06.md  QUICK_REFERENCE.md  WORKSHOP_GUIDELINES.md  deep_agents_progression.md  subagent_interrupt_surfacing.md
examples/: subagent_interrupt_surfacing.py  test_tavily_mcp.py
