[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[project]
name = "workshop-planner-agent"
version = "0.1.0"
description = "LangChain v1 workshop showcasing agent capabilities"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.0.19",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.0.0",
    "langsmith-fetch>=0.3.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "deepagents>=0.4.0",
    "deepagents-cli>=0.0.3",
    "pyppeteer>=0.0.25",
]

